--- a/weapp/apps/customerized_apps/red_envelope/templates/editor/red_envelope_participances.html
+++ b/weapp/apps/customerized_apps/red_envelope/templates/editor/red_envelope_participances.html
@@ -106,7 +106,7 @@
                     ${item.use_coupon_count}
 				</td>
 				<td>
-
+                    ${item.new_member_count}
 				</td>
 				<td>
 
