签到：按钮圆形

--- a/weapp/termite/static/termite_js/app/component/appkit/signdescription/signdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/signdescription/signdescription.html
@@ -171,6 +171,9 @@
             position: absolute;
             z-index: 0;
         }
+    .wui-i-dialog-btn.wui-i-closeDialog{
+        border-radius: 35px;
+    }
 
     </style>
     <link href="//cdn.bootcss.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
