签到：查看规则，细调

--- a/weapp/apps/customerized_apps/sign/templates/webapp/m_sign.html
+++ b/weapp/apps/customerized_apps/sign/templates/webapp/m_sign.html
@@ -136,6 +136,8 @@
         border-radius: 3px;
         font-size: 1.2em;
         font-weight: bold;
+        margin-top: 15px;
+        margin-bottom: 20%;
     }
 </style>
 {% endblock %}
