--- a/weapp/mall/templates/mall/editor/red_envelope_participences.html
+++ b/weapp/mall/templates/mall/editor/red_envelope_participences.html
@@ -100,7 +100,7 @@
 					${item.grade}
 				</td>
 				<td>
-                    ${item.bing_members_count}
+                    ${item.bring_members_count}
 				</td>
 				<td>
                     ${item.use_coupon_count}
