对于百宝箱抽奖、签到，隐藏组件控制面板

--- a/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
@@ -316,6 +316,9 @@ ui-appPage-commonStyle">
     /* 自动选中cid，当页面进来的时候 */
     W.autoSelectCid = 2;
 
+    //是否隐藏组件控制面板
+    W.hideActionPanel = true;
+
     var table;
     
     var loadPages = function(pageManagerView) {
