--- a/weapp/apps/customerized_apps/survey/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/survey/templates/editor/workbench.html
@@ -87,7 +87,10 @@
     W.isUserPageWalidate = true;
     /* 自动选中cid，当页面进来的时候 */
     W.autoSelectCid = 2;
-    
+
+    //阻止删除第一个组件
+    W.preventFirstComponentDelected = true;
+
     var loadPages = function(pageManagerView) {
       W.getApi().call({
         app: 'apps',
