--- a/weapp/termite2/templates/termite2/wepage_design_page.html
+++ b/weapp/termite2/templates/termite2/wepage_design_page.html
@@ -99,9 +99,9 @@
                             	$('.xa-designPage').find("div[data-cid='"+parent.W.autoSelectCid+"']").get(0).click();
 							}
                             if(parent.W.hideActionPanel){
-                                $('.xa-actionPanel').hide();
+                                $('.xa-actionPanel').find('.xa-add, .xa-delete').hide();
                             }
-						}, 10);							
+						}, 10);
 					} else {
 						//parent没有准备好，准备下一次检测
 						xlog('[design page]: parent is NOT ready, prepare next detecting');
@@ -110,6 +110,12 @@
 				}, 10)
 			};
 			$(document).ready(function() {
+                //选中组件，判断是否第一个，隐藏删除按钮
+                W.Broadcaster.on('selectwidget:assert', function(cid){
+                    if(parent.W.preventFirstComponentDelected && cid == 2){
+                        $('.xa-actionPanel').find('.xa-delete').hide();
+                    }
+                });
 				detectParentTask();
                 W.Broadcaster.trigger('designpage:ready');
 			});
