--- a/weapp/apps/customerized_apps/red_envelope/templates/editor/red_envelope_participances.html
+++ b/weapp/apps/customerized_apps/red_envelope/templates/editor/red_envelope_participances.html
@@ -100,7 +100,7 @@
 					${item.grade}
 				</td>
 				<td>
-                    ${item.bing_members_count}
+                    ${item.bring_members_count}
 				</td>
 				<td>
                     ${item.use_coupon_count}
