提交数据填充

--- a/weapp/apps/customerized_apps/red_envelope/templates/editor/red_envelope_participances.html
+++ b/weapp/apps/customerized_apps/red_envelope/templates/editor/red_envelope_participances.html
@@ -100,13 +100,13 @@
 					${item.grade}
 				</td>
 				<td>
-                    ${item.bing_members_count}
+                    ${item.introduce_received_number_count}
 				</td>
 				<td>
-                    ${item.use_coupon_count}
+                    ${item.introduce_used_number_count}
 				</td>
 				<td>
-                    ${item.new_member_count}
+                    ${item.introduce_used_number_count}
 				</td>
 				<td>
 
