--- a/weapp/apps/customerized_apps/red_envelope/templates/editor/red_envelope_participances.html
+++ b/weapp/apps/customerized_apps/red_envelope/templates/editor/red_envelope_participances.html
@@ -109,7 +109,7 @@
                     ${item.introduce_used_number_count}
 				</td>
 				<td>
-
+                    ${item.introduce_sales_number}
 				</td>
 				<td>
 					${item.created_at}
