（样式问题）【微信】-【实时消息】-【未读消息】手动全选会员后全选不能自动变成勾选状态。全选之后勾掉部分会员，全选按钮仍处于全选状态

--- a/weapp/weixin2/templates/weixin/message/realtime_messages.html
+++ b/weapp/weixin2/templates/weixin/message/realtime_messages.html
@@ -262,6 +262,23 @@ $(document).ready(function() {
         var isChecked = $checkbox.is(':checked');
         $('tbody .xa-select').prop('checked', isChecked);
 	});
+
+	$('.xa-content').delegate('.xa-select', 'click', function(event){
+		var all=true;
+		$('.xa-select').each(function(){
+			var isChecked = $(this).is(':checked');
+			if(!isChecked){
+				all=false;
+				$('#xa-selectAll').attr('checked', false);
+				return;
+			}
+		})
+		if(all){
+			$('#xa-selectAll').attr('checked', true);
+		}
+		
+	});
+
 	$('body').delegate('div.xui-i-voiceContent', 'click', function(event) {
 		event.stopPropagation();
 		event.preventDefault();
