--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/products_original.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/products_original.html
@@ -8,7 +8,7 @@
 </style>
 {% endblock %}
 {% block content-panel %}
-<div id='product_list_contain' data-role="page" data-theme="x" data-title="{{ page_title }}" class="xui-page xui-productsList-page">
+<div id='product_list_contain' data-role="page" data-theme="x" data-title="商品列表" class="xui-page xui-productsList-page">
 
     
     {% if global_navbar == None %}
@@ -40,7 +40,7 @@
                 </div>
                 {% endif %}
         </div>
-        <div class="xui-title pa">{{ category.name }}{% if category.name == "全部" %}商品{% endif %}</div>
+        <div class="xui-title"><span>{{ category.name }}{% if category.name == "全部" %}商品{% endif %}</span></div>
         <a href="./?woid={{request.webapp_owner_id}}&module=mall&model=shopping_cart&action=show" class="xui-shoppingCartBtn xt-shoppingCartBtn pa" data-role="button">
             <div>
                 <span class="xui-inner-count xa-shoppingCartCount hidden"></span>
