--- a/weapp/templates/webapp_content_base.html
+++ b/weapp/templates/webapp_content_base.html
@@ -5,7 +5,7 @@
 <html class="{% if user.is_from_android %} android{% endif %}{% if not user.is_from_weixin %} notweixin{% endif %}">
     <head>
         <meta charset="UTF-8" />
-        <title>商品列表111</title>
+        <title>商品列表</title>
         {% if request.enable_sql_monitor %}
         <link type="text/css" rel="stylesheet" media="all" href="/static/bootstrap/css/bootstrap.css">
         {% endif %}
