修复签到预览问题

--- a/weapp/apps/customerized_apps/sign/templates/webapp/m_sign.html
+++ b/weapp/apps/customerized_apps/sign/templates/webapp/m_sign.html
@@ -182,13 +182,13 @@
 
 {% block js %}
 <script type="text/javascript">
-	W.pageId = "{{request.GET.page_id}}";
+    W.pageId = "{{request.GET.page_id}}";
     var member_info = JSON.parse('{{ member_info|safe }}');
     var prize_info = JSON.parse('{{ prize_info|safe}}');
     var status = "{{ activity_status }}";
     var resultDialog;
 
-    function ResultDialog(selector){
+    function ResultDialog(selector) {
         var that = this;
         this.$el = $(selector || '#resultDialog');
         this.$title = this.$el.find('.xa-dialog-title');
@@ -201,10 +201,10 @@
         this.$coupon = this.$el.find('.coupon');
 
 
-        this.$userCenter.on('click', function(){
+        this.$userCenter.on('click', function () {
             if (!W.isMember) {
                 $('body').html('<div class="wui-appParticipantResult-Cover"><div class="wui-qrcode">' +
-                        '<img height="205px" width="205px" src="'+ W.qrcodeUrl+'">' +
+                        '<img height="205px" width="205px" src="' + W.qrcodeUrl + '">' +
                         '</div><div></div>');
             }
             else {
@@ -214,47 +214,51 @@
         });
         //初始化result dialog
         this.$mask = $('<div class="wui-mask"></div>');
-        this.$mask.on('click', function(){
+        this.$mask.on('click', function () {
             that.close();
         });
         $('body').append(this.$mask);
-        this.$el.find('.xa-closeDialog').on('click',function(){
+        this.$el.find('.xa-closeDialog').on('click', function () {
             that.close();
         });
     }
-    ResultDialog.prototype.render = function(status, data){
-        if(status){
+
+    ResultDialog.prototype.render = function (status, data) {
+        if (status) {
             this.$title.text('签到成功！');
-            if(data.integral){
+            if (data.integral) {
                 this.$integral.find('span').text(data.integral);
                 this.$integral.show();
-            }else if(data.coupon && data.coupon.count != -1){
-                if(data.coupon.count != 0){
+            } else if (data.coupon && data.coupon.count != -1) {
+                if (data.coupon.count != 0) {
                     this.$coupon.find('span').text(data.coupon.name);
                     this.$coupon.show();
-                }else{
+                } else {
                     this.$entityContent.html('奖励已领完,请联系客服补发');
                 }
             }
             this.$dialogContent.show();
-        }else{
+        } else {
             this.$title.text(data);
             this.$dialogContent.hide();
         }
         this.$mask.show();
         this.$el.show();
     };
-    ResultDialog.prototype.close = function(){
+    ResultDialog.prototype.close = function () {
         this.$mask.hide();
         this.$el.hide();
     };
 
-	$(function() {
+    $(function () {
         //隐藏参与活动按钮
         $('.xa-submitButtonContainer').hide();
+        if(W.isPC){
+            return false;
+        }
         resultDialog = new ResultDialog();
         //绑定签到按钮点击事件
-        $('.wa-sign-btn').on('click', function(){
+        $('.wa-sign-btn').on('click', function () {
             var $this = $(this);
             //非会员需要关注
             if (!W.isMember) {
@@ -263,9 +267,9 @@
                         '</div><div></div>');
                 return false;
             }
-            if('未开始' === status){
+            if ('未开始' === status) {
                 resultDialog.render(false, '签到活动未开始！');
-            }else{
+            } else {
                 //发起签到请求
                 W.getApi().call({
                     app: 'm/apps/sign',
@@ -275,20 +279,20 @@
                         webapp_owner_id: W.webappOwnerId,
                         id: W.appRecordId
                     },
-                    success: function(data) {
+                    success: function (data) {
                         prize_info = data;
                         status = '已签到';
                         //添加积分增长特效
                         var adder = data.curr_prize.integral;
                         var ori_integral = $('.wui-UserPoint').find('span').text();
                         $('.wui-UserPoint').find('span').text(parseInt(ori_integral) + adder);
-                        $('.wui-UserPoint').find('.wui-integral-adder').html('+'+adder).addClass('animated fadeOutUp');
+                        $('.wui-UserPoint').find('.wui-integral-adder').html('+' + adder).addClass('animated fadeOutUp');
                         fillPrizeInfo(prize_info);
-                        window.setTimeout(function(){
+                        window.setTimeout(function () {
                             resultDialog.render(true, data.curr_prize);
                         }, 1500);
                     },
-                    error: function(data) {
+                    error: function (data) {
                         resultDialog.render(false, '签到失败~');
                     }
                 });
@@ -303,81 +307,81 @@
         fillPrizeInfo(prize_info);
         //绑定规则信息事件
         //查看规则
-        $('.wa-signPageDiv').find('.wa-rules').on('click', function(){
+        $('.wa-signPageDiv').find('.wa-rules').on('click', function () {
             $('.wa-signPageDiv').hide();
             $('.wa-rules-div').show();
         });
         //积分数据
         $all_integral = prize_info.serial_integral;
-        $int_arr =[];
-        $int_html="";
-        for(var each in $all_integral){
-          $int_arr.push(each);
+        $int_arr = [];
+        $int_html = "";
+        for (var each in $all_integral) {
+            $int_arr.push(each);
         }
         $int_arr = $int_arr.sort();
-        for(var i=0;i<$int_arr.length;i++){
-            var j=i+1;
+        for (var i = 0; i < $int_arr.length; i++) {
+            var j = i + 1;
             var day_num = $int_arr[i];
             var points = $all_integral[$int_arr[i]];
-            if(day_num=='0'){
-                $int_html += "<li>1.每日签到,获得"+points+"积分奖励</li>";
-            }else{
-                $int_html += "<li>"+j+".连续签到至"+day_num+"天,获得"+points+"积分奖励</li>";
+            if (day_num == '0') {
+                $int_html += "<li>1.每日签到,获得" + points + "积分奖励</li>";
+            } else {
+                $int_html += "<li>" + j + ".连续签到至" + day_num + "天,获得" + points + "积分奖励</li>";
             }
         }
         $('.wa-rules-div').find('.wa-rules-i-content').html($int_html);
 
         //返回
-        $('.wui-rules-footer-div').find('.wa-btn-back').on('click', function() {
+        $('.wui-rules-footer-div').find('.wa-btn-back').on('click', function () {
             $('.wa-rules-div').hide();
             $('.wa-signPageDiv').show();
         });
         //个人中心
-        $('.wa-rules-i-center').on('click', function(){
+        $('.wa-rules-i-center').on('click', function () {
             window.location.href = '/termite/workbench/jqm/preview/?module=user_center&model=user_info&action=get&workspace_id=mall&webapp_owner_id=' + W.webappOwnerId;
         });
-	});
+    });
 
-    function fillPrizeInfo(prize_info){
-        if('已签到' != status){
+    function fillPrizeInfo(prize_info) {
+        if ('已签到' != status) {
             var temp_integral,
-                temp_coupon;
-            if(!$.isEmptyObject(prize_info.serial_prize)) {
+                    temp_coupon;
+            if (!$.isEmptyObject(prize_info.serial_prize)) {
                 temp_integral = prize_info.serial_prize.prize.integral;
                 temp_coupon = prize_info.serial_prize.prize.coupon;
-            }else{
+            } else {
                 temp_integral = prize_info.daily_prize.integral;
                 temp_coupon = prize_info.daily_prize.coupon;
             }
             $('.wa-daily_points').html(temp_integral || 0);
-            if (temp_coupon.id != 0){
-                prize_html = '"'+temp_coupon.name+'"';
+            if (temp_coupon.id != 0) {
+                prize_html = '"' + temp_coupon.name + '"';
                 prize_html += '一张';
-            }else{
+            } else {
                 prize_html = ''
             }
             $('.wa-daily_prizes').html(prize_html);
-        }else{
-             $('.wa-sign-btn').addClass('animated rotateOutUpRight').one('webkitAnimationEnd animationend', function(){
+        } else {
+            $('.wa-sign-btn').addClass('animated rotateOutUpRight').one('webkitAnimationEnd animationend', function () {
                 $(this).hide();
             });
             var temp_prize = prize_info.next_serial_prize;
             var str = [];
-            if(temp_prize){
-                $('.wa-sign-board').show().find('.wa-i-serial-count b').html(prize_info.serial_count<10?('0'+prize_info.serial_count):prize_info.serial_count);
-                if(temp_prize.prize.integral != 0){
-                    str.push("连续签到"+temp_prize.count+"天可领取"+temp_prize.prize.integral+"积分");
+            if (temp_prize) {
+                $('.wa-sign-board').show().find('.wa-i-serial-count b').html(prize_info.serial_count < 10 ? ('0' + prize_info.serial_count) : prize_info.serial_count);
+                if (temp_prize.prize.integral != 0) {
+                    str.push("连续签到" + temp_prize.count + "天可领取" + temp_prize.prize.integral + "积分");
                 }
-                if(temp_prize.prize.coupon.id != 0){
-                   str.push(" \""+temp_prize.prize.coupon.name+"\" 一张");
+                if (temp_prize.prize.coupon.id != 0) {
+                    str.push(" \"" + temp_prize.prize.coupon.name + "\" 一张");
                 }
-            }else{
+            } else {
                 var tomorrow_prize = prize_info.daily_prize;
-                if(tomorrow_prize.integral != 0){
-                    str.push("明天可领取"+tomorrow_prize.integral+"积分");
+                if (tomorrow_prize.integral != 0) {
+                    str.push("明天可领取" + tomorrow_prize.integral + "积分");
                 }
-                if(tomorrow_prize.coupon.id != 0){
-                   str.push("\""+tomorrow_prize.coupon.name+"\" 一张");
+                if (tomorrow_prize.coupon.id != 0) {
+                    str.push("\"" + tomorrow_prize.coupon.name + "\" 一张");
                 }
             }
             $('.wa-prize-board').html(str.toString());
